# Zilliqa

./: .gitignore  CMakeLists.txt  README.md  build.sh  constants.xml  constants_local.xml
cmake/: InstallG3log.cmake  InstallJsonrpccpp.cmake
docker/: Dockerfile
docker/dev/: Dockerfile
scripts/: ci_make_image.sh  downloadMb.sh  ds-ip-check.py  patchDB.sh  validatePersistence.sh
src/: CMakeLists.txt
src/cmd/: CMakeLists.txt  patchDB.cpp  querybalance.cpp  validateDB.cpp
src/common/: Constants.cpp  Constants.h  Messages.h
src/depends/: CMakeLists.txt
src/libConsensus/: ConsensusBackup.cpp  ConsensusBackup.h  ConsensusCommon.cpp  ConsensusCommon.h  ConsensusLeader.cpp  ConsensusLeader.h  ConsensusUser.cpp
src/libDirectoryService/: CMakeLists.txt  DSBlockConsensusMessage.h  DSBlockPostProcessing.cpp  DSBlockPreProcessing.cpp  DirectoryService.cpp  DirectoryService.h  FinalBlockPreProcessing.cpp  MicroBlockProcessing.cpp  PoW1Processing.cpp  PoWProcessing.cpp  ShardingPreProcessing.cpp  ViewChangePostProcessing.cpp  ViewChangePreProcessing.cpp
src/libLookup/: CMakeLists.txt  Lookup.cpp  Lookup.h  Synchronizer.cpp  Synchronizer.h
src/libMediator/: Mediator.cpp
src/libMessage/: CMakeLists.txt  Messenger.cpp  Messenger.h  ZilliqaMessage.proto
src/libNetwork/: Guard.cpp  Guard.h  P2PComm.cpp  RumorManager.cpp
src/libNode/: DSBlockProcessing.cpp  FinalBlockProcessing.cpp  MicroBlockPostProcessing.cpp  MicroBlockPreProcessing.cpp  MicroBlockProcessing.cpp  Node.cpp  Node.cpp_bak  Node.h  PoWProcessing.cpp  ShardingInfoProcessing.cpp  ViewChangeBlockProcessing.cpp
src/libPOW/: CMakeLists.txt  pow.cpp  pow.h
src/libPersistence/: BlockStorage.cpp  BlockStorage.h  Retriever.cpp  Retriever.h
src/libRumorSpreading/: RumorHolder.cpp
tests/: CMakeLists.txt
tests/Mediator/: CMakeLists.txt  Test_Mediator.cpp
tests/Mediator/Mocks/common/: Constants.h
tests/Mediator/Mocks/libArchival/: Archival.h  ArchiveDB.h  BaseDB.h
tests/Mediator/Mocks/libCrypto/: Schnorr.h  Sha2.h
tests/Mediator/Mocks/libData/BlockChainData/: BlockChain.h  BlockLinkChain.h
tests/Mediator/Mocks/libData/BlockData/BlockHeader/: DSBlockHeader.h
tests/Mediator/Mocks/libDirectoryService/: DirectoryService.cpp  DirectoryService.h
tests/Mediator/Mocks/libLookup/: Lookup.h  Synchronizer.h
tests/Mediator/Mocks/libNetwork/: Peer.h
tests/Mediator/Mocks/libNode/: Node.h
tests/Mediator/Mocks/libUtils/: DetachedFunction.h  SWInfo.h  ShardSizeCalculator.h  _DataConversion.h
tests/Mediator/Mocks/libValidator/: Validator.h
tests/POW/: CMakeLists.txt
(+40 files in other folders)
